fix flex wrap

--- a/front/css/layout/diagnostics.css
+++ b/front/css/layout/diagnostics.css
@@ -180,23 +180,20 @@ a{
 }
 
 .fixes-left{
-  flex: 0 1 45%;
+  flex: 0 45%;
   padding-bottom: 10px;
   width: 450px;
   border-right: 1px solid #efe8e8;
 }
 
 .fixes-right{
-  flex: 0 80%;
+  flex: 0 55%;
   min-width: 400px;
-  /* padding: 5px 10px; */
-  display: grid;
   height: 100%;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  flex-direction: column;
   max-height: 500px;
   overflow-y: auto;
+  border-top-right-radius: 5px;
+  margin-right: 1px;
 }
 
 .top-image-holder {
@@ -310,6 +307,7 @@ a{
   display: block;
   background: #f9f9f9;
   border-top: 1px solid #efe8e8;
+  width: 100%;
   padding: 10px 8px;
   border-bottom: 1px solid #efe8e8;
 }
@@ -320,6 +318,7 @@ a{
   height: auto;
   float: right;
   position: relative;
+  margin-right: 10px;
 }
 
 .brand-total{
